--- a/part2/public/index.html
+++ b/part2/public/index.html
@@ -2,32 +2,147 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dog Walking Service</title>
+  <title>Dog Walking Service - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .center-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .form-container, .table-container {
+      width: 100%;
+      max-width: 600px;
+    }
+    .dog-photo {
+      width: 100px;
+      height: auto;
+    }
+  </style>
 </head>
-<body class="bg-light">
+<body>
 
-  <div id="app" class="container py-5">
-    <h1 class="mb-4 text-primary">{{ message }}</h1>
-    <p class="lead">Connect with trusted walkers for your beloved dog!</p>
+<div id="app" class="container py-5 center-container">
 
-    <a href="owner-dashboard.html" class="btn btn-outline-primary me-2">Owner Dashboard</a>
-    <a href="walker-dashboard.html" class="btn btn-outline-success">Walker Dashboard</a>
+  <h1 class="mb-4 text-primary text-center">Welcome to the Dog Walking Service!</h1>
+
+  <!-- Login Form -->
+  <div class="form-container">
+    <form @submit.prevent="submitLogin" class="mb-4">
+      <div class="mb-3">
+        <label class="form-label">Username</label>
+        <input v-model="username" type="text" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input v-model="password" type="password" class="form-control" required>
+      </div>
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Log In</button>
+      </div>
+    </form>
+
+    <div v-if="error" class="alert alert-danger text-center">{{ error }}</div>
   </div>
 
-  <script>
-    const { createApp } = Vue;
-    createApp({
-      data() {
-        return {
-          message: 'Welcome to the Dog Walking Service!'
-        };
-      }
-    }).mount('#app');
-  </script>
+  <!-- Dog Table -->
+  <div class="table-container mt-5">
+    <h2 class="text-center">All Registered Dogs</h2>
+    <table class="table table-striped text-center">
+      <thead>
+        <tr>
+          <th>Dog ID</th>
+          <th>Name</th>
+          <th>Size</th>
+          <th>Owner ID</th>
+          <th>Photo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="dog in dogs" :key="dog.dog_id">
+          <td>{{ dog.dog_id }}</td>
+          <td>{{ dog.name }}</td>
+          <td>{{ dog.size }}</td>
+          <td>{{ dog.owner_id }}</td>
+          <td>
+            <img v-if="dog.photo" :src="dog.photo" alt="Dog photo" class="dog-photo">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+
+<script>
+  const { createApp, ref, onMounted } = Vue;
+
+  createApp({
+    setup() {
+      const username = ref('');
+      const password = ref('');
+      const error = ref('');
+      const dogs = ref([]);
+
+      async function submitLogin() {
+        error.value = '';
+        try {
+          const res = await fetch('/api/users/login', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username: username.value, password: password.value })
+          });
+
+          const result = await res.json();
+          if (!res.ok) throw new Error(result.error || 'Login failed');
+          window.location.href = result.redirect;
+        } catch (err) {
+          error.value = err.message;
+        }
+      }
+
+      async function loadDogs() {
+        try {
+          const res = await fetch('/api/users/dogs');
+          if (!res.ok) throw new Error('Failed to load dogs');
+          const dogList = await res.json();
+
+          for (let dog of dogList) {
+            try {
+              const imgRes = await fetch('https://dog.ceo/api/breeds/image/random');
+              const imgData = await imgRes.json();
+              dog.photo = imgData.message;
+            } catch {
+              dog.photo = '';
+            }
+          }
+
+          dogs.value = dogList;
+        } catch (err) {
+          console.error('Load dogs failed:', err);
+        }
+      }
+
+      onMounted(() => {
+        loadDogs();
+      });
+
+      return {
+        username,
+        password,
+        error,
+        dogs,
+        submitLogin
+      };
+    }
+  }).mount('#app');
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
