--- a/part2/public/owner-dashboard.html
+++ b/part2/public/owner-dashboard.html
@@ -9,7 +9,12 @@
 </head>
 <body class="bg-light">
   <div id="app" class="container py-4">
-    <h1 class="mb-4 text-primary">Owner Dashboard</h1>
+
+    <!-- Header with Logout Button -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h1 class="text-primary">Owner Dashboard</h1>
+      <button class="btn btn-outline-danger" @click="logout">Logout</button>
+    </div>
 
     <!-- Walk request form -->
     <div class="card mb-4">
@@ -19,8 +24,13 @@
       <div class="card-body">
         <form @submit.prevent="submitWalkRequest">
           <div class="mb-3">
-            <label class="form-label">Dog ID</label>
-            <input v-model="form.dog_id" type="number" class="form-control" required>
+            <label class="form-label">Select Your Dog</label>
+            <select v-model="form.dog_id" class="form-select" required>
+              <option disabled value="">-- Choose a dog --</option>
+              <option v-for="dog in dogs" :key="dog.dog_id" :value="dog.dog_id">
+                {{ dog.name }}
+              </option>
+            </select>
           </div>
           <div class="mb-3">
             <label class="form-label">Requested Date & Time</label>
@@ -77,8 +87,18 @@
         });
 
         const walks = ref([]);
+        const dogs = ref([]);
         const message = ref('');
         const error = ref('');
+
+        async function loadDogs() {
+          try {
+            const res = await fetch('/api/users/dogs-list');
+            dogs.value = await res.json();
+          } catch (err) {
+            error.value = 'Failed to load dogs';
+          }
+        }
 
         async function loadWalks() {
           try {
@@ -115,16 +135,28 @@
           }
         }
 
+        async function logout() {
+          try {
+            await fetch('/api/users/logout', { method: 'POST' });
+            window.location.href = '/';
+          } catch (err) {
+            console.error('Logout failed', err);
+          }
+        }
+
         onMounted(() => {
+          loadDogs();
           loadWalks();
         });
 
         return {
           form,
           walks,
+          dogs,
           message,
           error,
-          submitWalkRequest
+          submitWalkRequest,
+          logout
         };
       }
     }).mount('#app');
